--- a/locale/en.json
+++ b/locale/en.json
@@ -1,24 +1,52 @@
 {
- "name":"name",
- "faq":"Faq",
- "calculator":"Calculator",
- "converter":"Valuta converter",
- "contact":"Contact",
- "whereis":"Find my package?",
- "about":"About",
-"addresses":"Addresses",
-"examples":"Example websites",
-"prices":"Prices",
-"blog":"Blog",
-"signup":"Sign up",
-"signin":"Sign in",
-"howitworks":"How it works?",
-"gotoregister":"Qeydiyyatdan keç",
-"alttext1":"Sizə Türkiyə və ABŞ-da yerləşən anbarların ünvanlarını göndəririk",
-"makeorder":"Sifariş et",
-"alttext2":"ABŞ və Türkiyəyə çatdıran veb saytdan alış-veriş edirsiniz(əgər sifariş etməkdə problem yaranırsa, məhsulun linkini bizə göndərin, bank kartının vasitəsilə ödənişi həyata keçirin, biz sizin üçün sifariş edək",
-"getpackage":"Bağlamanı əldə et",
-"alttext3":"Sifairşinizi Bakı ofisimizdən götürürsünüz(və ya evinizə çatdırılma xidmətimizdən istifadə edirsiniz)",
-"shops":"Shops"
+    "name": "name",
+    "faq": "Faq",
+    "calculator": "Calculator",
+    "converter": "Valuta converter",
+    "contact": "Contact",
+    "whereis": "Find my package?",
+    "about": "About",
+    "addresses": "Addresses",
+    "examples": "Example websites",
+    "prices": "Prices",
+    "blog": "Blog",
+    "signup": "Sign up",
+    "signin": "Sign in",
+    "howitworks": "How it works?",
+    "gotoregister": "Registration",
+    "alttext1": "We send you the addresses of warehouses located in Turkey, Ukraine and the United States",
+    "makeorder": "Use the Order service",
+    "alttext2": "You make a purchase from a website that delivers to the US, Ukraine or Turkey (if you have aproblem ordering, send us a link to the product, pay by bank card, and we will order for you).",
+    "getpackage": "Get the package",
+    "alttext3": "You take your order from our office in Baku",
+    "shops": "Shops",
+    "tarifftitle": "Our tariffs by countries",
+    "turkey": "Turkey",
+    "isluqidturkey":"Turkey(liquid)",
+    "liquid": "Liquid products",
+    "usa": "USA",
+    "weight": "Weight",
+    "length": "Length",
+    "width": "Width",
+    "height": "Height",
+    "calc": "Calculate",
+    "emailerror":"Email is not valid",
+    "passworderror":"Password is not valid",
+    "choosectry":"Выбрать страну",
+    "deliveryprice":"Delivery price",
+    "seeall":"See all",
+    "lastnews":"Last news",
+    "stores":"Stores",
+    "email":"E-mail",
+    "password":"Şifrə",
+    "paybalance":"You can only pay the delivery fee with the amount you add to the balance!",
+    "refundable":"The amount paid is non-refundable!",
+    "transaction":"Transactions",
+    "date":"Date",
+    "payment":"Payment",
+    "balance-service":"Balance(services)",
 
+    "balance":"Balance"
+
+    
 }
