--- a/locale/ru.json
+++ b/locale/ru.json
@@ -13,12 +13,36 @@
     "signup":"Регистрация",
     "signin":"Войти",
     "howitworks":"Как это работает?",
-    "gotoregister":"Qeydiyyatdan keç",
-    "alttext1":"Sizə Türkiyə və ABŞ-da yerləşən anbarların ünvanlarını göndəririk",
-    "makeorder":"Sifariş et",
-    "alttext2":"ABŞ və Türkiyəyə çatdıran veb saytdan alış-veriş edirsiniz(əgər sifariş etməkdə problem yaranırsa, məhsulun linkini bizə göndərin, bank kartının vasitəsilə ödənişi həyata keçirin, biz sizin üçün sifariş edək",
-    "getpackage":"Bağlamanı əldə et",
-    "alttext3":"Sifairşinizi Bakı ofisimizdən götürürsünüz(və ya evinizə çatdırılma xidmətimizdən istifadə edirsiniz)",
-    "shops":"Магазины"
-
+    "gotoregister":"Вы регистрируетесь",
+    "alttext1":"Мы отправляем вам адреса складов, расположенных в Турции и США",
+    "makeorder":"Воспользуйтесь услугой «Заказать» ",
+    "alttext2":"Вы совершаете покупку на веб-сайте с доставкой в США или Турцию (если у васвозникли проблемы с заказом, отправьте нам ссылку на товар, оплатите банковской картой, и мы сделаем заказ для вас).",
+    "getpackage":"Получить заказ",
+    "alttext3":"Вы забираете свой заказ из нашего офиса в Баку (или пользуетесь можете воспользоваться нашей службой доставки на дом).",
+    "shops":"Магазины",
+    "tarifftitle": "Наши тарифы по странам",
+    "turkey": "Турция",
+    "isluqidturkey":"Турция(жидкость)",
+    "liquid": "Жидкие продукты",
+    "usa": "США",
+    "weight": "Вес(кг)",
+    "length": "Длинна(см)",
+    "width": "Ширина(см)",
+    "height": "Высота(см)",
+    "calc": "Вычислить",
+    "emailerror":"Неверный e-mail",
+    "passworderror":"Неверный пароль",
+    "choosectry":"Выбрать страну",
+    "deliveryprice":"Цена доставки",
+    "seeall":"Увидеть все",
+    "lastnews":"Новости",
+    "stores":"Магазины",
+    "email":"E-mail",
+    "password":"Пароль",
+    "paybalance":"Вы можете оплатить доставку только той суммой, которую добавляете на баланс!",
+    "refundable":"Уплаченная сумма возврату не подлежит!",
+    "transaction":"Транзакции",
+    "date":"Дата",
+    "payment":"Оплата",
+    "balance-service":"Баланс"
    }
