--- a/locale/az.json
+++ b/locale/az.json
@@ -43,7 +43,8 @@
     "refundable":"Ödənilən məbləğ geri qaytarılmır!",
     "transaction":"Tranzaksiyalar",
     "payment":"Ödəniş",
-    "balance-service":"Balans(xidmətlər)"
+    "balance-service":"Balans(xidmətlər)",
+    "tariff":"Tariflər"
     
     
     
