--- a/locale/en.json
+++ b/locale/en.json
@@ -45,7 +45,7 @@
     "date":"Date",
     "payment":"Payment",
     "balance-service":"Balance(services)",
-
+    "tariff":"Tariffs",
     "balance":"Balance"
 
     
