added error message in index

--- a/locale/az.json
+++ b/locale/az.json
@@ -11,7 +11,7 @@
     "prices":"Qiymətlər",
     "blog":"Bloq",
     "signup":"Qeydiyyatdan keç",
-    "signin":"Daxil ol",
+    "signin":"İstifadəçi girişi",
     "howitworks":"Necə işləyir?",
     "gotoregister":"Qeydiyyatdan keçirsiniz",
     "alttext1":"Sizə Türkiyə və ABŞ-da yerləşən anbarların ünvanlarını göndəririk",
