--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1,8 +1,8 @@
 {
-    "name":"name",
     "faq":"Часто задаваемые вопросы",
-    "calculator":"Kalkulyator",
-    "converter":"Valyuta konverteri",
+    "calculator":"Калькулятор",
+    "tariffs":"Тарифы",
+    "converter":"Конвертеры валют",
     "contact":"Контакт",
     "whereis":"Узнай где товар?",
     "about":"О Нас",
@@ -12,37 +12,147 @@
     "blog":"Блог",
     "signup":"Регистрация",
     "signin":"Войти",
+    "login":"Входить",
     "howitworks":"Как это работает?",
     "gotoregister":"Вы регистрируетесь",
     "alttext1":"Мы отправляем вам адреса складов, расположенных в Турции и США",
-    "makeorder":"Воспользуйтесь услугой «Заказать» ",
+    "makeorder":"Заказать",
     "alttext2":"Вы совершаете покупку на веб-сайте с доставкой в США или Турцию (если у васвозникли проблемы с заказом, отправьте нам ссылку на товар, оплатите банковской картой, и мы сделаем заказ для вас).",
     "getpackage":"Получить заказ",
     "alttext3":"Вы забираете свой заказ из нашего офиса в Баку (или пользуетесь можете воспользоваться нашей службой доставки на дом).",
     "shops":"Магазины",
     "tarifftitle": "Наши тарифы по странам",
     "turkey": "Турция",
+    "ukraina":"Украина",
     "isluqidturkey":"Турция(жидкость)",
     "liquid": "Жидкие продукты",
     "usa": "США",
+    "select-country":"выберите страну",
+    "country":"Cтрану",
     "weight": "Вес(кг)",
     "length": "Длинна(см)",
     "width": "Ширина(см)",
     "height": "Высота(см)",
+    "payed":"Оплачено",
+    "unpayed":"Неоплаченный",
+    "addneworder":"Добавить новый заказ",
+    "order-detail":"Детали заказа",
+    "size":"Размер",
+    "note":"Примечание",
     "calc": "Вычислить",
     "emailerror":"Неверный e-mail",
     "passworderror":"Неверный пароль",
     "choosectry":"Выбрать страну",
+    "color":"Цвет",
+    "review":"Рассмотрение",
     "deliveryprice":"Цена доставки",
     "seeall":"Увидеть все",
     "lastnews":"Новости",
     "stores":"Магазины",
-    "email":"E-mail",
-    "password":"Пароль",
+    "increases-balance":"Увеличить баланс",
     "paybalance":"Вы можете оплатить доставку только той суммой, которую добавляете на баланс!",
     "refundable":"Уплаченная сумма возврату не подлежит!",
     "transaction":"Транзакции",
     "date":"Дата",
     "payment":"Оплата",
-    "balance-service":"Баланс"
+    "balance-service":"Баланс(служба)",
+    "balance":"Баланс",
+    "declare-inadvance":"Заявить заранее",
+    "addresses-abroad":"Мои адреса за границей",
+    "orders":"Заказы",
+    "packages":"Пакеты",
+    "private-info":"Личная информация",
+    "lends":"Кредиты",
+    "courier-order":"Курьерский заказ",
+    "customer-code":"Код клиента",
+
+    "choose-dist":"Выберите регион",
+    "choose-date":"Выберите время",
+    "correct-addres":"Добавьте точный адрес",
+    "enter-number":"Введите контактный номер",
+    "definemap":"Отметить на карте",
+    "payed-packages":"Платные посылки",
+    "order-history":"История заказов",
+
+    "tracking":"Отслеживание",
+    "shop":"Магазин",
+    "category":"Kатегория",
+    "amount":"Стоимость товара",
+    "delivery":"Доставка",
+    "count":"Сказать",
+    "status":"Статус",
+
+
+    "example-shop":"Примеры сайтов",
+    "from-turkey":"Из Турции",
+    "from-USA":"Из Америки",
+
+    "most-read":"Наиболее читаемые",
+    "other-articles":"Другие статьи",
+
+    "contact-us":"Связаться с нами",
+    "contact-form":"Форма обратной связи",
+    "cf-info":"Введите свою контактную информацию и сообщение в форму ниже, и мы вернем вам деньги.",
+    "send":"oтправить",
+
+    "no-account":"Нет Регистрация ?",
+
+    "message":"твое сообщение",
+    "message-requir":"сообщение обязательно",
+    "name":"Ваше имя",
+    "name-requir":"имя обязательно",
+    "name-patter":"Имя может состоять только из букв",
+
+    "surname":"Ваша фамилия",
+    "surname-requir":"фамилия обязательна",
+    "surname-patter":"фамилия может состоять только из букв",
+
+    "email":"Эл. адрес",
+    "email-requir":"электронная почта является обязательной",
+    "email-patter":"электронная почта имеет неправильный формат",
+
+    "phone":"Телефон",
+    "phone-requir":"телефон обязательно",
+    "phone-patter":"Телефон не в правильном формате",
+    "phone-len":"Телефон может состоять из 9 символов",
+
+    "gender":"Пол",
+    "men":"Mужчина",
+    "women":"Женщины",
+
+
+    "date":"Дата рождения",
+    "date-requir":"дата является обязательной",
+
+    "serial":"Серийный номер S / v",
+    "serial-requir":"серийный номер является обязательным",
+    "serial-len":"Серийный номер должен быть в диапазоне 7-8 символов.",
+
+    "fin":"Код S / V Fin",
+    "fin-requir":"Финский код является обязательным",
+    "fin-min-max":"должно состоять максимум из 7 символов",
+
+    "nationality":"Национальность",
+    "nationality-requir":"гражданство обязательно",
+
+    "address":"Адрес",
+    "address-requir":"адрес является обязательным",
+
+    "password":"Пароль",
+    "pass-requir":"необходим пароль",
+    "pass-patter":"Пароль должен состоять из 1 тысячи букв, 1 цифры и 8 символов.",
+
+    "repeat-pass":"Повторите пароль",
+    "repeatpas-requir":"Требуется повторный пароль",
+    "repeatpas-valid":"повторный пароль не совпадает",
+
+    "tin":"ИНН",
+    "tin-requir":"ИНН является обязательным",
+
+    "register":"Регистрация",
+    "corporative":"Kорпоративный",
+    "complate-register":"Завершите регистрацию",
+    "register-hard":"Если вы не можете зарегистрироваться, посмотрите видео"
+
+
    }
