--- a/locale/ru.json
+++ b/locale/ru.json
@@ -9,6 +9,7 @@
     "addresses":"Наши адреса",
     "examples":"Магазины",
     "prices":"Тарифы",
+    "price":"Цена",
     "blog":"Блог",
     "signup":"Регистрация",
     "signin":"Войти",
@@ -22,6 +23,8 @@
     "alttext3":"Вы забираете свой заказ из нашего офиса в Баку (или пользуетесь можете воспользоваться нашей службой доставки на дом).",
     "shops":"Магазины",
     "tarifftitle": "Наши тарифы по странам",
+    "tariff":"Тарифы",
+    "search":"Где моя посылка?",
     "turkey": "Турция",
     "ukraina":"Украина",
     "isluqidturkey":"Турция(жидкость)",
@@ -65,7 +68,9 @@
     "lends":"Кредиты",
     "courier-order":"Курьерский заказ",
     "customer-code":"Код клиента",
-
+    "choose-all":"выбрать анчоусы",
+    "curry-cand":"Условия перевозки",
+     "new-order":"Новый порядок",
     "choose-dist":"Выберите регион",
     "choose-date":"Выберите время",
     "correct-addres":"Добавьте точный адрес",
@@ -80,7 +85,9 @@
     "amount":"Стоимость товара",
     "delivery":"Доставка",
     "count":"Сказать",
+    "count-pro":"Число",
     "status":"Статус",
+    "addnewproduct":"Новые продукты",
 
 
     "example-shop":"Примеры сайтов",
