--- a/locale/ru.json
+++ b/locale/ru.json
@@ -35,6 +35,7 @@
     "oldpassword":"Старый пароль",
     "newpassword":"Новый пароль",
     "upload":"Скачать инвойс",
+    "see-invoice":"Посмотреть инвойс",
     "addcode":"добавить код",
     "confirm":"подтверждать",
     "personalinfo":"Личная информация",
@@ -138,7 +139,7 @@
     "cf-info":"Введите свою контактную информацию и сообщение в форму ниже, и мы вернем вам деньги.",
     "send":"oтправить",
 
-    "no-account":"Нет Регистрация ?",
+    "no-account":"Забыли пароль?",
 
     "message":"твое сообщение",
     "message-requir":"сообщение обязательно",
@@ -180,7 +181,7 @@
 
     "address":"Адрес",
     "address-requir":"адрес является обязательным",
-
+    "new-pass":"Oбновить пароль",
     "password":"Пароль",
     "pass-requir":"необходим пароль",
     "pass-patter":"Пароль должен состоять из 1 тысячи букв, 1 цифры и 8 символов.",
