--- a/locale/az.json
+++ b/locale/az.json
@@ -76,6 +76,7 @@
     "paybycard":"Kartla ödə",
     "paybybalance":"Baıansdan ödə",
     "upload":"Invoys yüklə",
+    "see-invoice":"Invoysa bax",
     "total":"Cəmi",
     "chosed":"bağlama seçilib",
     "choose-all":"hamsını seç",
