--- a/locale/az.json
+++ b/locale/az.json
@@ -153,7 +153,7 @@
     "country":"ölkə",
 
 
-    "no-account":"Hesabınız yoxdur?",
+    "no-account":"Şifrəni unutmusunuz?",
 
 
     "message":"mesajınız",
