--- a/locale/ru.json
+++ b/locale/ru.json
@@ -26,7 +26,7 @@
     "ent-code":"введите код отслеживания",
     "examples":"Магазины",
     "search-pac":"Найдите свой посылок",
-    "use-cond":"Условия и положения",
+    "use-cond":"Условия заказа",
     "prices":"Тарифы",
     "linksf":"Ссылки",
     "price":"Цена",
@@ -102,7 +102,11 @@
     "courier-order":"Курьерский заказ",
     "customer-code":"Код клиента",
     "choose-all":"выбрать все",
+    "useragreement":"Пользовательское Соглашение",
+    "terms":"условия и положения",
     "curry-cand":"Условия перевозки",
+    "search-ex":"Пример",
+
      "new-order":"Новый порядок",
     "choose-dist":"Выберите регион",
     "choose-date":"Выберите время",
