--- a/locale/az.json
+++ b/locale/az.json
@@ -35,6 +35,7 @@
     "getpackage":"Bağlamanı əldə edin",
     "alttext3":"Sifairşinizi Bakı ofisimizdən götürürsünüz(və ya evinizə çatdırılma xidmətimizdən istifadə edirsiniz)",
     "shops":"Bəzi mağazalar",
+    "azerpost":"Azərpoçt",
     "tarifftitle":"Ölkələr üzrə tariflərimiz",
     "tariff":"Qiymətlər",
     "search":"Bağlamam haradadır",
