--- a/locale/en.json
+++ b/locale/en.json
@@ -205,6 +205,7 @@
     "complate-register":"Complate register",
     "register-hard":"If register is hard please watch video",
     "use-cond":"Orders condition",
+    "azerpost":"Azərpost",
     "search-pac":"Find your package"
 
 
