--- a/locale/ru.json
+++ b/locale/ru.json
@@ -14,7 +14,7 @@
     "main-g":"Главный",
     "sub-g":"Подгруппа",
     "price-inv":"Цена для инвойса",
-    "ord-pay":"Олатить после заказа",
+    "ord-pay":"Оплатить после заказа",
     "agreement":"Я согласен",
     "paylend":"оплатить кредит",
     "dateon":"Дата",
@@ -27,6 +27,9 @@
     "examples":"Магазины",
     "search-pac":"Найдите свой посылок",
     "use-cond":"Условия заказа",
+    "azerpost":"Азерпочта",
+    "post-requir":"Почтовый индекс требуется",
+    "choose-post":"Выберите почтовый индекс",
     "prices":"Тарифы",
     "linksf":"Ссылки",
     "price":"Цена",
